fix oops and make the client ui a bit more readable

--- a/public/styles.css
+++ b/public/styles.css
@@ -5,7 +5,6 @@
     color: #444;
     height:20px;
     font-size: 16px;
-    font-weight: bold;
 }
 
 .small {
